--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,15 @@
 #Отключает таймауты у hystrix.
 hystrix.command.default.execution.timeout.enabled=false
 
+feign.client.config.gr-arounder.connectTimeout=1000
+feign.client.config.gr-arounder.readTimeout=1000
+
+#feign.client.gr-arounder.connectTimeout =6000
+#feign.prop .gr-arounder.readTimeout =6000
+#feign.client.feignName.logging-level=headers
+
+#feign.client.config.default.connectTimeout=1000
+#feign.client.config.default.readTimeout=2000
+#feign.client.config.default.loggerLevel=FULL
 logging.level.com.netflix=INFO
-spring.sleuth.sampler.percentage=0.1
+
