--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
     </parent>
 
     <properties>
+        <thirdparty.jersey.version>2.22.2</thirdparty.jersey.version>
+        <thirdparty.spring.version>4.2.4.RELEASE</thirdparty.spring.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
@@ -23,6 +25,7 @@
     </properties>
 
     <dependencies>
+
 
         <!--Логгер-->
         <dependency>
